<resources>
    <string name="app_name">3DE</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Date of Birth (MM/DD/YYYY)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_gender">Select Gender</string>
    <string name="user_details">User Details</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="guardian_details">Guardian Details</string>
    <string name="guardian_name">Guardian Name</string>
    <string name="guardian_mobile">Guardian Mobile</string>
    <string name="guardian_mail">Guardian Mail</string>
    <string name="language">English</string>
    <string name="english" translatable="false">English</string>
    <string name="sinhala">සිංහල</string>
    <string name="hello">Hello</string>
    <string name="orientation">Orientation</string>
    <string name="memory">Memory</string>
    <string name="decision_making">Decision Making</string>
    //orientation
    <string name="tcc">TCC</string>
    <string name="instructions">Instructions</string>
    <string name="start">Start</string>
    <string name="have_you_seen_this_picture_before">Have you Seen this Picture before?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hint">Tap on mic to start</string>
    <string name="title_activity_level_music_play">LevelMusicPlayActivity</string>
    <string name="g_sign_in">Sign in with Google</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="attention">attention</string>
    <string name="walking">walking</string>
    <string name="talking">talking</string>
    <string name="go">Go</string>
    <string name="start_test">Start Test</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="title_activity_attention_walking_landing">AttentionWalkingLanding</string>
    //verbal memory
    <string name="olfail">O/L Failed</string>
    <string name="olpass">O/L Passed</string>
    <string name="alpass">A/L Passed</string>
    <string name="play">Hit Play Button to Play</string>
    <string name="isleaningcom">Is Listening Complete?</string>
    <string name="yesv">OK</string>
    <string name="nov">CANCEL</string>
    <string name="procced">PROCEED</string>
    <string name="processing">PROCESSING...</string>
    <string name="next_test">NEXT TEST IN</string>
    <string name="result">RESULTS</string>
    <string name="memorystuts_pass">Memory Status : Pass</string>
    <string name="memorystuts_fail">Memory Status : Fail</string>
    <string name="pass">Pass</string>
    <string name="fail">Fail</string>
    <string name="risklevel_no">Risk Level : No</string>
    <string name="risklevel_low">Risk Level : Low</string>
    <string name="risklevel_medium">Risk Level : Medium</string>
    <string name="risklevel_high">Risk Level : High</string>
    <string name="has">Yes</string>
    <string name="hasnot">No</string>
    <string name="immediate">Immediate Recall :</string>
    <string name="delayed">Delayed Recall :</string>
    <string name="selectlevel">Select Your Level</string>
    // Visual Memory
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="title_activity_profile_management">ProfileManagement</string>
    <string name="visual_memory">Visual Memory</string>
    <string name="finalResults">Final Results</string>
    <string name="resultsFor">Results for </string>
    <string name="examDate">Exam date: </string>
    <string name="demetiaStatus">Dementia Status: </string>
    <string name="resultsSent">Results sent to : </string>
    <string name="home">Home</string>
    <string name="thank_you">Thank You</string>
    <string name="startWalking">Start walking in</string>
    <string name="walkingTask">Walking Task</string>
    <string name="keepWalking">Keep walking until you hear a beep</string>
    <string name="listening">Listening…</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="notAllowed">Not allowed</string>
    <string name="tccResult">You\'ve completed the TCC test case, your tcc value is </string>
    <string name="tccRnCmpltd">Run completed, please come back in 1 hour for the 2nd run.</string>
    <string name="round">Round </string>
    <string name="startIn">Start Activity in</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="select_your_best_ability">Select your best ability</string>
    <string name="results">Results</string>
    <string name="Substract">Substract 2 values starting from 50-0</string>
    <string name="starts_activity_in">Starts Activity in</string>
    <string name="talking_task">Talking Task</string>
    <string name="press_start_and_start_substracting_2_values_from_50_0">Press \'Start\' and start substracting 2 values from 50-0</string>
    <string name="remember_to_read_out_loud">Remember to read out loud</string>
    <string name="tap_to_start_recording">Tap to Start Recording</string>
    <string name="now_stand_up_repeat_the_same_substracting_task_while_walking_in_a_straight_line">Now, Stand up,Repeat the same substracting task while walking in a straight line</string>
    <string name="stop_once_you_hear_the_beep">Stop once you hear the Beep</string>
    <string name="walking_and_talking" />
    <string name="your_words_will_appear_here">Your words will appear here</string>
    <string name="try_to_remember_the_images_shown_in_the_image_set">Try to remember the images shown in the image set.</string>
    <string name="note_an_image_will_only_be_displayed_for_2_seconds">Note: An image will only be displayed for 2 seconds</string>
    <string name="account">Account</string>
    <string name="reports">Reports</string>
    <string name="attention_test">Attention Test</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="try_to">Try to remember the below image</string>
    <string name="round_1">Round 1</string>
    <string name="skip_round">SKIP ROUND</string>
    <string name="exit">EXIT</string>
    <string name="final_results_stats">Final Results Stats</string>
    <string name="attention_results_stats">Attention Results stats</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="dementia_status">Dementia Status</string>


</resources>