<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_attemtion_test"
            android:icon="@drawable/ic_baseline_science_24"
            android:title="@string/attention_test" />
        <item
            android:id="@+id/nav_testing"
            android:icon="@drawable/ic_baseline_science_24"
            android:title="Testing" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/logout"/>
    </group>
</menu>