<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32sp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finalResults"
            android:textSize="24sp"
            style="@style/TextAppearance.MaterialComponents.Headline5"/>
        
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:padding="20sp"
            android:src="@mipmap/app_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="50sp"
            android:gravity="start"
            >
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:padding="10sp"
            style="@style/TextAppearance.MaterialComponents.Body1"/>
        
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examDate"
            android:padding="10sp"
            style="@style/TextAppearance.MaterialComponents.Body2"/>
        
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demetiaStatus"
            android:padding="10sp"
            style="@style/TextAppearance.MaterialComponents.Body2"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/emails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultsSent"
                android:padding="10sp"
                style="@style/TextAppearance.MaterialComponents.Body2"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            app:icon="@drawable/ic_baseline_home_24"
            app:cornerRadius="10sp"
            android:onClick="navigateHome"
            />
    </LinearLayout>
</RelativeLayout>