<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoiceLandingLegacy">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:text="@string/decision_making"
                    android:textSize="26sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn2"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/memory"
                    android:textSize="26sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn3"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:onClick="directToOrientation"
                    android:text="@string/orientation"
                    android:textSize="26sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn4"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/visual_memory"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn2" />

            </LinearLayout>

</RelativeLayout>