<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:background="@color/theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tcc"
        android:textColor="@color/white"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_centerHorizontal="true"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/instruction1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:text="@string/try_to_remember_the_images_shown_in_the_image_set"
        android:textSize="26sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/noteText"
            android:layout_width="350dp"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:text="@string/note_an_image_will_only_be_displayed_for_2_seconds"
            android:textColor="@color/white"
            android:textSize="26sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="55dp"
        android:onClick="startTCC"
        android:backgroundTint="@color/white"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:cornerRadius="10dp" />

</RelativeLayout>