<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    tools:context=".orientation.AttentionSingleTaskLanding">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/instructions"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/singleTaskType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:text="@string/talking_task"
        android:textColor="@color/white"
        android:textSize="28sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/singleTaskInstruct"
            android:layout_width="350dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/press_start_and_start_substracting_2_values_from_50_0"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/singleTaskNote"
            android:layout_width="350dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/remember_to_read_out_loud"
            android:textColor="@color/white"
            android:textSize="26sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="42dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_marginBottom="55dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/white"
        android:onClick="directToTest"
        android:text="Start"
        android:textColor="@color/black"
        android:textSize="26sp" />


</RelativeLayout>