<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".verbalMemory.LevelMusicPlayActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customerSpinnerLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:hint="@string/selectlevel">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/customerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            tools:ignore="KeyboardInaccessibleWidget" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="@drawable/background_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<!--        <pl.droidsonroids.gif.GifImageView-->
<!--            android:id="@+id/animgif"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="300dp"-->
<!--            android:background="@drawable/headset"-->
<!--            />-->
        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/play"></TextView>
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/start"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@android:drawable/ic_media_play"
             />
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:textSize="17dp"
        android:background="@drawable/btn"
        android:layout_marginBottom="12dp"
        android:text="@string/procced" />

</RelativeLayout>